# ocr-rust

./: .gitignore  Cargo.toml  README.md  api_sample.ps1
src/: constant.rs  main.rs  model.rs  router.rs  state.rs  status_code.rs
src/ocr/: azure_service.rs  copilot.rs  deepseek_ocr.rs  mod.rs
