[package]
name = "ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web & Core Framework
tower-http = { version = "0.6.7", features = ["fs", "cors"] }
axum = {version = "0.8.8", features = ["http2", "ws", "macros", "multipart", "json"]}
tokio = { version = "1.0", features = ["full"] }

# Data Handling & Utilities
dotenv = "0.15.0"
anyhow = "1.0.100"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.28"

# Logging & Diagnostics
tokio-util = { version = "0.7", features = ["compat"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1.43"

# Database (SQL Server)
bb8 = "0.9.0"
bb8-tiberius = "0.16.0"
tiberius = { version = "0.12", features = ["tds73", "native-tls", "chrono"] }

ollama-rs = "0.3.2"
base64 = "0.22.1"



